--- a/mlsd_pytorch/configs/mobilev2_mlsd_tiny_512_base2_bsize24.yaml
+++ b/mlsd_pytorch/configs/mobilev2_mlsd_tiny_512_base2_bsize24.yaml
@@ -12,7 +12,7 @@ train:
     img_dir:  "./data/wireframe_raw/images/"
     label_fn: "./data/wireframe_raw/train.json"
     num_train_epochs: 155
-    batch_size: 24
+    batch_size: 24 # on paperspace Gradient it should be changed to 12 in order to not saturate the GPU
     learning_rate: 0.003
     use_step_lr_policy: True
     weight_decay: 0.000001
@@ -42,6 +42,6 @@ loss:
     match_sap_thresh: 5.0
 
 decode:
-    score_thresh: 0.05
+    score_thresh: 0.05 # in original paper is suggested 0.125
     len_thresh: 5
     top_k: 500
