--- a/mlsd_pytorch/configs/mobilev2_mlsd_tiny_512_base2_bsize24.yaml
+++ b/mlsd_pytorch/configs/mobilev2_mlsd_tiny_512_base2_bsize24.yaml
@@ -6,11 +6,11 @@ model:
     model_name: 'mobilev2_mlsd'
     with_deconv: True
 
-
+# For train on michele's PC
 train:
-    save_dir:  './workdir/models/mobilev2_mlsd_tiny_512_bsize24/'
-    img_dir:  "./data/wireframe_raw/images/"
-    label_fn: "./data/wireframe_raw/train.json"
+    save_dir:  '/Users/michelebechini/GitHub/mlsd_pytorch/workdir/models/mobilev2_mlsd_tiny_512_bsize24/'
+    img_dir:  "/Users/michelebechini/GitHub/mlsd_pytorch/data/wireframe_raw/images/"
+    label_fn: "/Users/michelebechini/GitHub/mlsd_pytorch/data/wireframe_raw/train.json"
     num_train_epochs: 155
     batch_size: 24 # on paperspace Gradient it should be changed to 12 in order to not saturate the GPU
     learning_rate: 0.003
@@ -27,10 +27,36 @@ train:
     cache_to_mem: False
 
 val:
-    img_dir: "./data/wireframe_raw/images/"
-    label_fn: "./data/wireframe_raw/valid.json"
+    img_dir: "/Users/michelebechini/GitHub/mlsd_pytorch/data/wireframe_raw/images/"
+    label_fn: "/Users/michelebechini/GitHub/mlsd_pytorch/data/wireframe_raw/valid.json"
     batch_size: 8
     val_after_epoch: 50
+
+# FOR train on paperspace
+#train:
+#    save_dir:  './workdir/models/mobilev2_mlsd_tiny_512_bsize24/'
+#    img_dir:  "./data/wireframe_raw/images/"
+#    label_fn: "./data/wireframe_raw/train.json"
+#    num_train_epochs: 155
+#    batch_size: 24 # on paperspace Gradient it should be changed to 12 in order to not saturate the GPU
+#    learning_rate: 0.003
+#    use_step_lr_policy: True
+#    weight_decay: 0.000001
+#    load_from: ""
+#    warmup_steps: 100
+#    milestones: [ 50, 100, 150 ]
+#    milestones_in_epo: True
+#    lr_decay_gamma: 0.2
+#
+#    data_cache_dir: "./data/wireframe_cache/"
+#    with_cache: False
+#    cache_to_mem: False
+#
+#val:
+#    img_dir: "./data/wireframe_raw/images/"
+#    label_fn: "./data/wireframe_raw/valid.json"
+#    batch_size: 8
+#    val_after_epoch: 50
 
 loss:
     loss_weight_dict_list: [ { 'tp_center_loss': 10.0,'sol_center_loss': 1.0,'tp_match_loss':1.0 } ]
