moved upscale in layer Type-A

--- a/mlsd_pytorch/configs/mobilev2_mlsd_tiny_512_base2_bsize24.yaml
+++ b/mlsd_pytorch/configs/mobilev2_mlsd_tiny_512_base2_bsize24.yaml
@@ -4,7 +4,7 @@ datasets:
 
 model:
     model_name: 'mobilev2_mlsd'
-    with_deconv: True
+    with_deconv: False
 
 # For train on michele's PC
 train:
